--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=configurando ambiente desarrollo
 configuracion.autor.nombre=Hugo
-configuracion.autor.email=hgmorm@gmail.com
+configuracion.autor.email=hgmorm@gmail.gmail
